--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,17 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # Database - NeonDB (or any Postgres)
 # Format: postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require
 DATABASE_URL="postgresql://user:password@ep-xxx.region.aws.neon.tech/neondb?sslmode=require"
+
+# Redis (for BullMQ video processing queue)
+REDIS_URL=
+# Or use host/port/password:
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Cloudflare R2 (S3-compatible) for video/image uploads
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_R2_ACCESS_KEY_ID=
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=
+CLOUDFLARE_R2_BUCKET_NAME=
+CLOUDFLARE_R2_PUBLIC_URL=
