--- a/package.json
+++ b/package.json
@@ -22,19 +22,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.700.0",
     "@fastify/jwt": "^9.0.1",
     "@prisma/client": "^6.0.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.69.3",
     "fastify": "^5.1.0",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "ioredis": "^5.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^22.10.1",
     "nodemon": "^3.1.7",
     "prisma": "^6.0.0",
-"tsx": "^4.19.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
-
